libexif-0.6.16:
  * Updated translations: cz, pl, vi


New in 0.6.15 (2007-05-23) since 0.6.14 (2007-05-10):

  * Added support for 2 new types of Pentax makernotes & Casio type2 makernote

  * Added support for Win XP metadata (Author, Comment, KeyWords, Title,
    Subject) tags

  * Bug fixes:
    [ 1443183 ] install error when doxygen is not present.

  * New translations: Czech, Slovak.

  * Improved doxygen generated API and code internals
    documentation. Made building of code internals docs optional
    (--enable-internal-docs) as the call graphs take quite long to
    build. Made building any docs optional (--disable-docs).


New in 0.6.14 (2007-05-10) since 0.6.13 (2005-12-27):

  * Bug fixes: #1457501, #1471060, #1525770, #1617991, #1703284, #1716196

  * Extended support of Canon, Nikon, Olympus makernotes

  * Added option EXIF_DATA_OPTION_DONT_CHANGE_MAKER_NOTE to prevent
    modification of maker notes

  * Other fixes and improvements which include API/ABI additions.


New in 0.6.13 (2005-12-27) since 0.6.12 (2005-03-13):

  * Bug fixes: #803191, #1051994, #1054321, #1054323, #1196787
  
  * For pkg-config users, force usage of #include <libexif/exif-*.h>
    (disable #include <exif-.h>)

  * Updated German translation

  * Build system tuning

  * Misc changes:
    Fix COPYRIGHT tag, fix memory corruption, use qsort.


New in 0.6.12 (2005-03-13) since 0.6.11 (2004-10-16):

  * Final fix of Ubuntu Security Notice USN-91-1 (CAN-2005-0664)
    https://bugzilla.ubuntulinux.org/show_bug.cgi?id=7152

  * Updated build system with cross compile capabilities

  * Small fixes:
    Fix tag order, use even offsets, improve Nikon&Olympus mnote tags.


New in 0.6.11 (2004-10-16) since 0.6.10 (2004-08-27):

  * Improved tag names, titles, and descriptions.

  * Bug fixes for memory leaks, format strings, month one off, ...

  * Support for Watcom compiler (requires manual copying of files)


New in 0.6.10 (2004-08-27) since 0.5.9 (2002-12-11):
